--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cortex-m = "0.6.0"
 cortex-m-rt = "0.6.10"
 cortex-m-semihosting = "0.3.3"
 panic-halt = "0.2.0"
+auxiliary = { path = "auxiliary" }
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
@@ -28,6 +29,8 @@ panic-halt = "0.2.0"
 [dependencies.stm32f4]
 version = "0.14.0"
 features = ["stm32f469", "rt"]
+
+
 
 
 # this lets you use `cargo fix`!
